Working on getting cities longitude and lattitude from OpenWeather Geoloc